chore: minor code cleanup